[FEAT]: Creación de componentes para vista de archivos modificados con el número de visualizaciones, listado de commits y visualización de path de commit #18